# secp256k1-zkp

./: Makefile.am  configure.ac
cpp/: Makefile_cpp  field_5x52_int128_impl.cpp  scalar_4x64_impl.cpp
src/: Makefile_cpp  field.h  field_5x52_impl.h  field_5x52_int128_impl.h  field_impl.h  scalar.h  scalar_4x64_impl.h  scalar_impl.h  test.c
